[project]
name = "claude-python-dev"
version = "0.1.0"
description = ""
authors = [
    {name = "Tzur Vaich",email = "tzurvaich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
